--- a/kakao_login/pubspec.yaml
+++ b/kakao_login/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   kakao_flutter_sdk: ^1.2.2
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
