--- a/kakao_login/pubspec.yaml
+++ b/kakao_login/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   kakao_flutter_sdk: ^1.2.2
   dio: ^4.0.6
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
