--- a/kakao_login/pubspec.yaml
+++ b/kakao_login/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   kakao_flutter_sdk: ^1.2.2
   dio: ^4.0.6
   json_annotation: ^4.7.0
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
