--- a/kakao_login/pubspec.yaml
+++ b/kakao_login/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^4.0.6
   json_annotation: ^4.7.0
   package_info: ^2.0.2
+  platform: ^3.1.0
 
 dev_dependencies:
   flutter_test:
