--- a/kakao_login/pubspec.yaml
+++ b/kakao_login/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_annotation: ^4.7.0
   package_info: ^2.0.2
   platform: ^3.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
